package com.eduplatform.grpc;

import com.eduplatform.grpc.user.*;
import io.grpc.stub.StreamObserver;
import org.springframework.stereotype.Service;

@Service
public class UserServiceImpl extends UserServiceGrpc.UserServiceImplBase {
    
    @Override
    public void getUser(
            GetUserRequest request,
            StreamObserver<UserResponse> responseObserver) {
        // TODO: Implement user retrieval logic
        UserResponse response = UserResponse.newBuilder()
                .setId(request.getUserId())
                .setUsername("")
                .setEmail("")
                .build();
        
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void validateUser(
            ValidateUserRequest request,
            StreamObserver<ValidateUserResponse> responseObserver) {
        // TODO: Implement user validation logic
        ValidateUserResponse response = ValidateUserResponse.newBuilder()
                .setValid(false)
                .build();
        
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    @Override
    public void getUserRoles(
            GetUserRolesRequest request,
            StreamObserver<GetUserRolesResponse> responseObserver) {
        // TODO: Implement get user roles logic
        GetUserRolesResponse response = GetUserRolesResponse.newBuilder()
                .addAllRoles(java.util.Collections.emptyList())
                .build();
        
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }
}
